tests/ui/codegen/mir/validation/parse_unknown_phase.mir
//@compile-flags: --pass none

@module UnknownPhase
@phase shiny //~ ERROR: unknown MIR phase `shiny`

fn @f() {
  bb0:
    stop
}
